# talk-trek-server

./: Dockerfile  main.py  pyproject.toml
api/: api.py
app/: auth.py  config.py  dependencies.py
app/routes/: chat.py  journal.py
app/services/: chat_service.py
