[tool.poetry]
name = "talk-trek-server"
version = "0.1.0"
description = ""
authors = ["Bill1907 <a31829660@gamil.com>"]
readme = "README.md"

[tool.poetry.scripts]
start_server = "uvicorn api.api:app --reload"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
requests = "^2.31.0"
uvicorn = "^0.23.2"
aiofiles = "^23.1.0"
websockeeeets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"